# xacc-projectq

./: .travis.yml  CMakeLists.txt  README.md
compiler/: CMakeLists.txt  ProjectQ.g4  ProjectQCompiler.cpp  ProjectQCompiler.hpp  ProjectQCompilerActivator.cpp  ProjectQErrorListener.hpp  ProjectQToXACCListener.cpp  ProjectQToXACCListener.hpp  generate.sh  manifest.json
examples/: CMakeLists.txt  README.md  h2_exp_vals.py  log.txt  projectq_out.csv  pyquil_out.csv
python/: CMakeLists.txt  xacc-projectq-py.cpp
tests/: CMakeLists.txt  ProjectQCompilerTester.cpp
